welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.error
parotTrouble:3: error: missing parameter type
    if(hour=>7 && hour <= 20){
       ^parotTrouble:3: error: value && is not a member of Int
    if(hour=>7 && hour <= 20){
               ^parotTrouble:3: error: type mismatch;
 found   : Unit
 required: Boolean
    if(hour=>7 && hour <= 20){
    ^